banner will by hidden for mobile devices

--- a/register/register.css
+++ b/register/register.css
@@ -24,3 +24,9 @@
     font-family: cursive;
     margin: auto auto;
 }
+
+@media only screen and (max-width: 600px) {
+.collab-banner{
+    display: none;
+}
+}
